cmake_minimum_required(VERSION 3.16)
project(functional_programming_exercises)

set(CMAKE_CXX_STANDARD 17)

add_executable(functional_programming_exercises main.cpp)
add_executable(exercise1 exercise1.cpp country.h country.cpp city.h city.cpp world-util.h world-util.cpp)
add_executable(exercise2 exercise2.cpp country.h country.cpp city.h city.cpp world-util.h world-util.cpp)
add_executable(exercise3 exercise3.cpp country.h country.cpp city.h city.cpp world-util.h world-util.cpp)
add_executable(exercise4 exercise4.cpp country.h country.cpp city.h city.cpp world-util.h world-util.cpp)
add_executable(exercise5 exercise5.cpp country.h country.cpp city.h city.cpp world-util.h world-util.cpp)
add_executable(exercise6 exercise6.cpp country.h country.cpp city.h city.cpp world-util.h world-util.cpp)
add_executable(exercise7 exercise7.cpp country.h country.cpp city.h city.cpp world-util.h world-util.cpp)
add_executable(exercise8 exercise8.cpp country.h country.cpp city.h city.cpp world-util.h world-util.cpp)